--- a/test/test.html
+++ b/test/test.html
@@ -3,14 +3,13 @@
 	<head>
 		<title>Test matrix lib</title>
 		<link rel="stylesheet" href="/test/lib/jasmine.css">
-		<script src='/app/js/lib/jquery-1.10.2.js'></script>
-		<script src="/app/js/lib/underscore.js"></script>
-		<script src="/app/js/lib/backbone.js"></script>
+		<script src='/asset/js/jquery-1.10.2.js'></script>
+		<script src="/asset/js/underscore.js"></script>
+		<script src="/asset/js/backbone.js"></script>
 		<script src="/test/lib/jasmine.js"></script>
 		<script src="/testem.js"></script>
 		<script src="/test/lib/jasmine-html.js"></script>
-		<script src="/app/js/lib/sylvester.src.js"></script>
-		<script src="/app/js/lib/matrix_lib.js"></script>
+		<script src="/src/matrix_lib.js"></script>
 		<script src="/test/spec/matrix_lib_spec.js"></script>
 	</head>
 	<body>
